--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,29 @@
+buildscript {
+    ext.kotlin_version = '1.0.0-beta-4584'
+
+    repositories {
+        jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.derek_s.cursor"
         minSdkVersion 15
-        targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 23
+        versionCode 2
+        versionName "1.0.1"
     }
     buildTypes {
         release {
@@ -21,6 +35,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.afollestad:material-dialogs:0.6.2.1'
+
+    // Google - Android
+    compile "com.android.support:design:$android_support_version"
+    compile "com.android.support:support-annotations:$android_support_version"
+
+    // Kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "io.reactivex:rxkotlin:$rxkotlin_version"
+
+    // Views
+    compile("com.github.afollestad.material-dialogs:core:$materialdialogs_version") {
+        transitive = true
+    }
 }
