--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,27 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+
+    ext.android_support_version = '23.1.1'
+    ext.rxkotlin_version ='0.30.1'
+    ext.materialdialogs_version = '0.8.5.3@aar'
+
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.fabric.io/public' }
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
