--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ActMain"
+            android:name=".ui.activities.ActMain"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateVisible|adjustResize">
             <intent-filter>
