--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,6 @@ buildscript {
     ext.rxkotlin_version ='0.30.1'
     ext.materialdialogs_version = '0.8.5.3@aar'
 
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
-    }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
     }
@@ -17,8 +12,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        // materialdialogs
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.fabric.io/public' }
+        //kotterknife snapshots
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
 
